Fix paragraph breaks, add list, add h2 spacing in articles

--- a/static/css/shared/shared.css
+++ b/static/css/shared/shared.css
@@ -1,180 +1,179 @@
 * {
-	margin     : 0;
-	padding    : 0;
-	box-sizing : border-box;
-	font-family: 'Domine', serif;
-	line-height: 200%;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Domine", serif;
+  line-height: 200%;
 }
 
 #container {
-	width             : 100%;
-	height            : 100vh;
-	display           : grid;
-	grid-template-rows: max-content auto max-content;
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  grid-template-rows: max-content auto max-content;
 }
 
 /* Add a black background color to the top navigation */
 .base-nav {
-	background-color: #333;
-	grid-row        : 1;
+  background-color: #333;
+  grid-row: 1;
 
-	display    : flex;
-	flex-wrap: wrap;
-	align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
 footer {
-	background-color: #333;
-	color           : white;
-	text-align      : center;
-	width           : 100%;
-	grid-row        : 3;
+  background-color: #333;
+  color: white;
+  text-align: center;
+  width: 100%;
+  grid-row: 3;
 
-	display        : flex;
-	align-items    : center;
-	justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .base-body {
-	width    : 100%;
-	max-width: 50%;
+  width: 100%;
+  max-width: 50%;
 
-	/* These two center content! */
-	margin-left : auto;
-	margin-right: auto;
+  /* These two center content! */
+  margin-left: auto;
+  margin-right: auto;
 
-	grid-row: 2;
+  grid-row: 2;
 }
 
 @media (max-width: 1000px) {
-	.base-body {
-		max-width: 90%;
-	}
+  .base-body {
+    max-width: 90%;
+  }
 }
-
 
 /* Style the links inside the navigation bar */
 .base-nav a {
-	float          : left;
-	color          : #f2f2f2;
-	text-align     : center;
-	padding        : 1rem 1rem;
-	text-decoration: none;
-	font-size      : 1rem;
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 1rem 1rem;
+  text-decoration: none;
+  font-size: 1rem;
 }
 
 /* Change the color of links on hover */
 .base-nav a:hover {
-	background-color: #ddd;
-	color           : black;
+  background-color: #ddd;
+  color: black;
 }
 
 /* Add a color to the active/current link */
 .base-nav a.active {
-	background-color: #04AA6D;
-	color           : white;
+  background-color: #04aa6d;
+  color: white;
 }
 
 .card-bg {
-	background: rgb(231, 236, 226);
+  background: rgb(231, 236, 226);
 }
 
 .card-bg:hover {
-	background: rgb(121, 118, 118);
-	color     : white;
-	transform : scale(1.02);
+  background: rgb(121, 118, 118);
+  color: white;
+  transform: scale(1.02);
 }
 
 .rounded {
-	border-radius: 0.5rem;
+  border-radius: 0.5rem;
 }
 
 .ease {
-	transition: all .2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
 .link-reset a {
-	text-decoration: none;
-	color          : inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 .flex-row {
-	display       : flex;
-	flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
 .flex-column {
-	display       : flex;
-	flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .flex-wrap {
-	flex-wrap: wrap;
+  flex-wrap: wrap;
 }
 
 .margin-auto {
-	margin: auto
+  margin: auto;
 }
 
 .text-center {
-	text-align: center;
+  text-align: center;
 }
 
 .breather-y {
-	margin-top   : 2rem;
-	margin-bottom: 2rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .padding {
-	padding: 1rem;
+  padding: 1rem;
 }
 
 .grid-4 {
-	display      : grid;
-	gap          : 1rem;
-	align-items  : center;
+  display: grid;
+  gap: 1rem;
+  align-items: center;
 
-	grid-template-rows   : 1fr;
-	grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 1fr;
+  grid-template-columns: repeat(4, 1fr);
 }
 
 @media (max-width: 1000px) {
-	.grid-4 {
-		grid-template-rows   : 0.5fr 0.5fr 1fr 1fr;
-		grid-template-columns: 1fr;
-	}
+  .grid-4 {
+    grid-template-rows: 0.5fr 0.5fr 1fr 1fr;
+    grid-template-columns: 1fr;
+  }
 }
 
 .grid-3 {
-	display      : grid;
-	gap          : 1rem;
-	align-items  : center;
+  display: grid;
+  gap: 1rem;
+  align-items: center;
 
-	grid-template-rows   : 1fr;
-	grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr;
+  grid-template-columns: repeat(3, 1fr);
 }
 
 @media (max-width: 1000px) {
-	.grid-3 {
-		grid-template-rows   : 0.5fr 0.5fr 1fr;
-		grid-template-columns: 1fr;
-	}
+  .grid-3 {
+    grid-template-rows: 0.5fr 0.5fr 1fr;
+    grid-template-columns: 1fr;
+  }
 }
 
 .grid-2 {
-	display      : grid;
-	gap          : 1rem;
-	align-items  : center;
+  display: grid;
+  gap: 1rem;
+  align-items: center;
 
-	grid-template-rows   : 1fr;
-	grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr;
+  grid-template-columns: repeat(2, 1fr);
 }
 
 @media (max-width: 1000px) {
-	.grid-2 {
-		grid-template-rows   : 0.5fr 0.5fr;
-		grid-template-columns: 1fr;
-	}
+  .grid-2 {
+    grid-template-rows: 0.5fr 0.5fr;
+    grid-template-columns: 1fr;
+  }
 }
 
 .component-shell {
@@ -188,21 +187,29 @@ footer {
 }
 
 pre {
-	width: 100%;
-	font-size: smaller;
+  width: 100%;
+  font-size: smaller;
 }
 
 code * {
-	font-family: 'Comic Mono', monospace;
-	font-weight: bold;
+  font-family: "Comic Mono", monospace;
+  font-weight: bold;
 }
 
 .language-rust {
-	line-height: 100%;
+  line-height: 100%;
 }
 
 .card-thumbnail {
-	max-width: 320px;
-	width    : 100%;
-	height   : auto;
+  max-width: 320px;
+  width: 100%;
+  height: auto;
+}
+
+.component-article ul {
+  padding-left: 2rem;
+}
+
+.component-article h2:not(:first-child) {
+  margin-top: 2rem;
 }
